# ZenovaAPI

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  c-cpp.yml  deploy.yml  tag-release.yml  test.yml
inc/: Zenova.h
inc/Zenova/: Common.h  Hook.h  JsonHelper.h  Log.h  Minecraft.h  Mod.h  Platform.h  Version.h
inc/Zenova/Minecraft/: Inputs.h  Version.h
inc/Zenova/Profile/: ModInfo.h
maps/windows-x64/: InputSymbols.json  RPSymbols.json
maps/windows/x64/: InputSymbols.json  RPSymbols.json  Temp.json  process_headers.py
src/: ResourceHeaders.h  Zenova.cpp  Zenova.h  ZenovaAPI.rc  dllmain.cpp  initasm.asm  initcpp.cpp  initcpp.h
src/Zenova/: Common.cpp  Common.h  Globals.h  Helper.cpp  Helper.h  Hook.cpp  Hook.h  JsonHelper.cpp  JsonHelper.h  Log.cpp  Log.h  MessageRedirection.cpp  MessageRedirection.h  Minecraft.cpp  Mod.cpp  Mod.h  PackManager.cpp  PackManager.h  StorageResolver.cpp  StorageResolver.h  Version.cpp
src/Zenova/Hooks/: InputHooks.h  ResourceHooks.h
src/Zenova/Minecraft/: InputHeaders.h  Inputs.cpp  ResourceHeaders.h  Version.cpp
src/Zenova/OS/: Linux.cpp  Linux.h  OS.cpp  OS.h  Windows.cpp  Windows.h
src/Zenova/Platform/: Linux.cpp  Platform.cpp  Platform.h  PlatformImpl.h  Windows.cpp
src/Zenova/Profile/: Manager.cpp  Manager.h  ModInfo.cpp  ModInfo.h  ProfileInfo.cpp  ProfileInfo.h
src/Zenova/Utils/: Memory.cpp  Memory.h  Utils.cpp  Utils.h
tools/: demangle.py  process_headers.py  process_symbol_map.py  process_symmap.py
